Fix jumping text area on page load on contact form - ticket 207
Another attempt to stop jiggles in the contact form for Ash (107)

--- a/tbx/core/static/torchbox/css/components/_contact-form.scss
+++ b/tbx/core/static/torchbox/css/components/_contact-form.scss
@@ -99,6 +99,10 @@ $gutter: 15px;
 				}
 			}
 
+			.contact-form__field-wrapper {
+				position: relative;
+			}
+
 			.contact-action {
 				text-align: center;
 			}
